[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "2captcha-python>=1.5.1",
    "beautifulsoup4>=4.13.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "selenium>=4.29.0",
    "setuptools>=76.0.0",
    "trafilatura>=2.0.0",
    "twocaptcha>=0.0.1",
    "undetected-chromedriver>=3.5.5",
    "pyinstaller>=6.5.0",
]
